Add projects section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,64 @@
       </div>
     </section>
 
+    <section id="projects">
+      <h2 class="projects-title">Projects</h2>
+      <div class="project-grid">
+        <article class="project-card">
+          <img
+            src="images/podcastapp.png"
+            alt="Podcast App Screenshot"
+            id="podcastapp-image"
+          />
+          <h3>Podcast App</h3>
+          <p>
+            A responsive podcast app built with HTML, CSS, and JS Web
+            Components.
+          </p>
+          <p><strong>Tech:</strong> HTML, CSS, JS</p>
+          <a
+            href="https://github.com/Lindokuhle-dumakude/LINDUM25535_FTO2506_GroupB_Lindokuhle_Dumakude_DJS01.git"
+            target="_blank"
+            >View Code</a
+          >
+        </article>
+        <article class="project-card">
+          <img
+            src="images/kanban-app.png"
+            alt="Kanban App Screenshot"
+            id="Kanban-image"
+          />
+          <h3>Kanban Board App</h3>
+          <p>
+            A responsive Kanban Board web application built with HTML, CSS, and
+            JavaScript.
+          </p>
+          <p><strong>Tech:</strong> HTML, CSS, JS</p>
+          <a
+            href="https://github.com/Lindokuhle-dumakude/LINDUM25535_FTO2506_GroupB_Lindokuhle_Dumakude_JSLPP.git"
+            target="_blank"
+            >View Code</a
+          >
+        </article>
+
+        <article class="project-card">
+          <img
+            src="images/intsagram-profile.png"
+            alt="Cs Pet Instagram Profile"
+            id="instagram-image"
+          />
+          <h3>Instagram Profile App</h3>
+          <p>Image gallery with likes and hover overlays using CSS Grid.</p>
+          <p><strong>Tech:</strong> HTML, CSS</p>
+          <a
+            href="https://github.com/Lindokuhle-dumakude/Module_06_LINDUM25535_FTO2506_GroupB_Lindokuhle-Dumakude_SDF03.git"
+            target="_blank"
+            >View Code</a
+          >
+        </article>
+      </div>
+    </section>
+
     
   </body>
 </html>
