Add contact form

--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
       </div>
     </section>
 
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Let's collaborate or connect!</p>
+      <form id="contactForm">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
+
     
   </body>
 </html>
