--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
       </form>
     </section>
 
-    
+    <footer>
+      <p>© 2025 Lindokuhle Dumakude | Built using HTML, CSS & JS</p>
+    </footer>
   </body>
 </html>
