replace contact form with contact details

--- a/index.html
+++ b/index.html
@@ -106,12 +106,25 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Let's collaborate or connect!</p>
-      <form id="contactForm">
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Your Email" required />
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
+
+      <div class="contact-details">
+        <p><strong>Email:</strong> lindokuhle.dumakude11@gmail.com</p>
+        <p><strong>Phone:</strong> +27 67 889 3142</p>
+        <p>
+          <strong>LinkedIn:</strong>
+          <a
+            href="https://www.linkedin.com/in/lindokuhle-dumakude/"
+            target="_blank"
+            >linkedin.com/in/lindokuhle-dumakude/</a
+          >
+        </p>
+        <p>
+          <strong>GitHub:</strong>
+          <a href="https://github.com/Lindokuhle-dumakude" target="_blank"
+            >github.com/Lindokuhle-dumakude</a
+          >
+        </p>
+      </div>
     </section>
 
     <footer>
